tests/paczka1/small_fuzzy/64303746.err
Error in line 3: 7sNO19mM A296 53,5
Error in line 13: Ase11Khyq7 A483 50,3
